--- a/gistguild-distribution/src/main/resources/application.yml
+++ b/gistguild-distribution/src/main/resources/application.yml
@@ -10,7 +10,7 @@ server:
 
 spring:
   application:
-    name: guistguild-distribution
+    name: gistguild-distribution
   rabbitmq:
     addresses: amqp://server
   cloud:
