--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <spring-cloud.version>Greenwich.SR4</spring-cloud.version>
         <lombok.version>1.18.16</lombok.version>
         <jackson.version>2.13.0</jackson.version>
+        <commons-csv.version>1.8</commons-csv.version>
     </properties>
 
     <dependencyManagement>
